--- a/index.html
+++ b/index.html
@@ -74,11 +74,7 @@ h1 {
 </head>
 
 <body>
-  <script>
-    setTimeout(function () {
-      window.location.href = "https://braceslinear.com/d40w8mx5c?key=e15240371508f21838848c29a618630a";
-    }, 1000);
-  </script>
+
 <div class="container">
   <h1>Click Link to Watch</h1>
 
@@ -88,15 +84,17 @@ h1 {
     https://cdn.videy.co/eKTXvuoL1.mp4
   </a>
 
-  <a 
-    href="https://beginshello.com/tjcnn7ah8?key=3954a32ca52d1ee27a9735e1908641c4"
-    class="gif-btn">
-    <img 
-      src="https://cdn.storageimagedisplay.com/349/34c/ec9/320x50_2_iam18.gif" 
-      alt="Advertisement">
-  </a>
+ <script>
+  atOptions = {
+    'key' : 'e3390cf0a8cdf953ded85bdaaf3046a5',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/e3390cf0a8cdf953ded85bdaaf3046a5/invoke.js"></script>
 </div>
 
 </body>
-
 </html>
